# atcoder_template

./: .gitignore  CMakeLists.txt  all_build.sh  build.sh  copy.sh  main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp  main_e.cpp  main_f.cpp  make_ws.sh  readme.md
log/20170812_70/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
log/20180128_90/: main_a.cpp  main_c.cpp
log/20210320_ABC_196/: copy.sh  main_a.cpp  main_b.cpp  main_c.cpp
log/20210411_198/: CMakeLists.txt  main_a.cpp  main_b.cpp  main_c.cpp
log/20210424_ABC_199/: main_a.cpp  main_b.cpp  main_c.cpp  main_e.cpp
log/20210515_201/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp  make_ws.sh
log/20210522_202/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp  main_e.cpp
log/20210523_ARC_120/: main_a.cpp  main_b.cpp  main_c.cpp
log/20210530_203/: clean.sh  main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
log/20210606_ABC_204/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
log/20210613_abc_205/: build.sh  main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp  main_e.cpp
log/20210619_abc_206/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp  main_e.cpp
log/20210626_abc_207/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
log/ant01/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
log/ant1/: main_a.cpp  main_b.cpp
log/ant2/: main_a.cpp  main_c.cpp  main_d.cpp
log/ant3/: main_a.cpp  main_b.cpp  main_c.cpp  main_d.cpp
template/: temprate.cpp  temprate_full.cpp
